Drop SemanticdbAgent, PackageHub, and other dead code paths (#902)